# noargs

./: Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: arrays.rs  basics.rs  subcommands.rs
skills/noargs/: SKILL.md
src/: arg.rs  args.rs  args2.rs  cmd.rs  error.rs  flag.rs  formatter.rs  help.rs  lib.rs  log.rs  metadata.rs  opt.rs  subcommand.rs  writer.rs
