[package]
name = "noargs"
version = "0.4.0"
edition = "2024"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
license = "MIT"
description = "Imperative command-line argument parser library with no dependencies, no macros, and no implicit I/O"
homepage = "https://github.com/sile/noargs"
repository = "https://github.com/sile/noargs"
readme = "README.md"
categories = [ "command-line-interface" ]

[dependencies]
